--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --color-bg: #000033;
+        --color-bg: #161A21;
         --color-text: #E0E0E0;
     }
 }
